# quantisation-reasoning-tradeoff-CoT

./: LICENSE.txt  README.md  run_pipeline.py
1_quantisation/: project.ipynb  pyproject.toml  quantisation.py
2_inference/: _worker.py  benchmark_results_004.csv  benchmark_results_005.csv  project.ipynb  pyproject.toml
2_inference/scripts/: benchmark.py  inference_utils.py  math_equiv.py
3_evaluation/: notebook.ipynb  pyproject.toml
3_evaluation/scripts/: analysis.py  plots.py
